--- a/CrystalReportMVC/CrystalReportMVC.csproj
+++ b/CrystalReportMVC/CrystalReportMVC.csproj
@@ -220,14 +220,12 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReportsViewModels\CustomerByMenuViewModel.cs" />
+    <Compile Include="ReportsViewModels\CustomerByMenuViewModel2.cs" />
     <Compile Include="ReportsViewModels\CustomerMenuReportViewModel.cs" />
     <Compile Include="ReportsViewModels\CustomerReportViewModel.cs" />
     <Compile Include="ReportsViewModels\MenuProdutoReportViewModel.cs" />
     <Compile Include="ReportsViewModels\MenuReportViewModel.cs" />
     <Compile Include="ReportsViewModels\ProdutoReportViewModel.cs" />
-    <Compile Include="sysdiagrams.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
